--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
     crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css" />
 </head>
 
 <body>
     
-  <nav class="m-2 justify-content-center flex-row"><h1>weather dashboard</h1></nav>
+  <nav class="m-2 mt-4 justify-content-center flex-row"><h1>weather dashboard</h1></nav>
   
   <div class="flex-row align-start align-content-start align-content-stretch-md min-vh-100 bgSky">
     
